Fix display issues with titles that move off-screen.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
@@ -214,8 +214,7 @@
     }
 
     .fc-following {
-        text-transform: uppercase;
-        padding-top: 2px !important;
+        padding-top: 1px !important;
     }
 
     .fc-month-view th.fc-widget-header,
